src/core/css/social/media-comments.css
/* ... */
.fg-comments-replies > summary:hover > span {
    text-decoration: underline;
}
.fg-comments-replies:not([open]) > summary > .fg-icon-circle-plus {
    display: inline-block;
}
.fg-comments-replies[open] > summary > .fg-icon-circle-minus {
    display: inline-block;
}

/* collapsable icon color */
.fg-comments-replies > summary > .fg-icon {
    color: var(--fg-collapsible-icon-color);
}
.fg-comments-replies > summary:hover > .fg-icon,
.fg-comments-replies[open] > summary > .fg-icon {
    color: currentColor;
}

.fg-comments-responses {
    position: relative;
    display: flex;
    flex-direction: column;
    list-style: none;
    margin: 0;
    padding: 0;
    gap: var(--fg-comments-spacing);
}

.fg-comments-replies > .fg-comments-responses {
    margin-top: var(--fg-comments-spacing);
}
div.fg-comments-replies > .fg-comments-responses {
    padding-inline-start: 16px;
}
details.fg-comments-replies > .fg-comments-responses {
    padding-inline-start: 22px;
}

.fg-comments-response {
    position: relative;
    display: grid;
    grid-auto-rows: auto;
    grid-template-columns: 1fr;
    grid-template-rows: minmax(32px, auto) auto;
    grid-template-areas:
        "comment-header"
        "comment-body";
    gap: 0;
    column-gap: 6px;
    row-gap: var(--fg-comments-spacing);
}

.fg-comments-response:has(> .fg-comments-replies) {
    grid-template-rows: minmax(32px, auto) auto auto;
    grid-template-areas:
        "comment-header"
        "comment-body"
        "comment-replies";
}

.fg-comments-response:has(> .fg-comments-form) {
    grid-template-rows: minmax(32px, auto) auto auto;
    grid-template-areas:
        "comment-header"
        "comment-body"
        "comment-form";
}

.fg-comments-response:has(> .fg-comments-replies):has(> .fg-comments-form) {
    grid-template-rows: minmax(32px, auto) auto auto auto;
    grid-template-areas:
        "comment-header"
        "comment-body"
        "comment-replies"
        "comment-form";
}

.fg-comments-response:has(> .fg-comments-avatar) {
    grid-template-columns: 32px 1fr;
    grid-template-areas:
        "comment-avatar comment-header"
        ". comment-body";
}

.fg-comments-response:has(> .fg-comments-avatar):has(> .fg-comments-replies) {
    grid-template-rows: minmax(32px, auto) auto auto;
    grid-template-areas:
        "comment-avatar comment-header"
        ". comment-body"
        "comment-replies comment-replies";
}

.fg-comments-response:has(> .fg-comments-avatar):has(> .fg-comments-form) {
    grid-template-rows: minmax(32px, auto) auto auto;
    grid-template-areas:
        "comment-avatar comment-header"
        ". comment-body"
        "comment-form comment-form";
}

.fg-comments-response:has(> .fg-comments-avatar):has(> .fg-comments-replies):has(> .fg-comments-form) {
    grid-template-rows: minmax(32px, auto) auto auto auto;
    grid-template-areas:
        "comment-avatar comment-header"
        ". comment-body"
        "comment-replies comment-replies"
        "comment-form comment-form";
}

.fg-comments-avatar {
    grid-area: comment-avatar;
    display: flex;
    align-items: center;
    justify-content: center;
}
.fg-comments-avatar > img {
    display: block;
    border-radius: 50%;
}

.fg-comments-header {
    grid-area: comment-header;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}

.fg-comments-author,
.fg-comments-author > a {
    color: inherit;
    text-decoration: none;
}
.fg-comments-author > a:hover,
.fg-comments-author > a:focus {
    text-decoration: underline;
}

.fg-comments-subheader {
    display: flex;
    flex-direction: row;
    gap: var(--fg-comments-spacing);
}

.fg-comments-date {
    font-size: smaller;
}

.fg-comments-body {
    position: relative;
    grid-area: comment-body;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    margin: 0;
    gap: var(--fg-comments-spacing);
}

.fg-comments-moderation {
    font-size: 13px;
    font-style: italic;
}

.fg-comments-content {
    font-size: 14px;
}

.fg-comments-form-cancel,
.fg-comments-edit,
.fg-comments-reply {
    display: inline-block;
    border: none;
    background: none;
    text-decoration: underline;
    padding: 0;
    margin: 0;
    box-shadow: none;
    text-shadow: none;
    font-size: 13px;
    cursor: pointer;
    color: inherit;
    user-select: none;
}
.fg-comments-form-cancel:hover,
.fg-comments-form-cancel:focus,
.fg-comments-edit:hover,
.fg-comments-edit:focus,
.fg-comments-reply:hover,
.fg-comments-reply:focus {
    text-decoration: none;
}

.fg-comments-form-cancel:disabled {
    display: none;
}

/* form styles */
.fg-comments-form-leave-reply-wrap {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    padding: 10px 0 0 0;
    border: none;
    border-top-width: 1px;
    border-top-style: solid;
    width: 100%;
}

.fg-comments-form {
    grid-area: comment-form;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 10px;
    width: 100%;
    margin: 0;
    border: none;
    border-top-style: solid;
    border-top-width: 1px;
    padding: var(--fg-comments-spacing) 0;
}

.fg-comments-response .fg-comments-form {
    margin: var(--fg-comments-spacing) 0 0 0;
}
.fg-comments-response:not(:last-child) .fg-comments-form {
    border-bottom-style: solid;
    border-bottom-width: 1px;
}

.fg-comments-form-title {
    box-sizing: border-box;
    display: flex;
    gap: 10px;
    align-items: baseline;
    font-weight: 600;
    line-height: 20px;
    padding: 0 0 11px 0;
    border: none;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    width: 100%;
}

.fg-comments-form-notes {
    box-sizing: border-box;
}
/* ... */

